# skelly_synchronize

./: .flake8  .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: lint-with-black.yml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml  python-testing.yml
search/: search_index.json
skelly_synchronize/: __init__.py  __main__.py  moviepy_issue.py  skelly_synchronize.py  skelly_synchronize_moviepy.py  test_test.py
skelly_synchronize/core_processes/: audio_utilities.py  correlation_functions.py  debug_output.py  normalize_framerates.py
skelly_synchronize/core_processes/debugging/: debug_output.py  debug_plots.py
skelly_synchronize/core_processes/video_functions/: deffcode_functions.py  ffmpeg_functions.py  video_utilities.py
skelly_synchronize/gui/: skelly_synchronize_gui.py
skelly_synchronize/gui/widgets/: run_button_widget.py
skelly_synchronize/system/: default_paths.py  file_extensions.py  logging_configuration.py  paths_and_file_names.py
skelly_synchronize/tests/: conftest.py  test_all_files_created.py  test_normalize_lag_dict.py  test_number_of_videos_is_preserved.py  test_trim_single_video_deffcode.py  test_trim_single_video_opencv.py  test_videos_are_same_length.py  unit_tests.py
skelly_synchronize/tests/utilities/: check_list_values_are_equal.py  find_frame_count_of_video.py  get_number_of_frames_of_videos_in_a_folder.py  load_sample_data.py
skelly_synchronize/utils/: check_if_video_has_reversed_metadata.py  check_if_video_is_vertical.py  ffmpeg_transposition_dictionary.py  get_video_files.py  path_handling_utilities.py
