# pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skelly_synchronize"
description = "Basic template of a python repository"
readme = "README.md"
authors = [{ name = "skelly_synchronize", email = "info@freemocap.org" }]
license = { file = "LICENSE" }




classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", #https://www.gnu.org/philosophy/open-source-misses-the-point.en.html
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
] #additional classifiers can be found here: https://pypi.org/classifiers/

keywords = ["basic",
            "template",
            "python",
            "repository"] #change these to your project keywords

dependencies = [
"pytest",
"librosa",
"PyQt6",
"numpy",
"scipy",
"setuptools",
"opencv-contrib-python==4.6.0.66",
"deffcode",
"toml",
"plotly",
"kaleido"
] #add additional dependencies here - try to pin versions as minimally as possible

requires-python = ">=3.8"

dynamic = ["version"]

[project.optional-dependencies]
dev = [
"black",
"bumpver", 
"isort", 
"pip-tools", 
"pytest", 
"flake8",
"flake8-bandit",
"flake8-bugbear",
]

[tool.bumpver] #bump the version by entering `bumpver update` in the terminal
current_version = "v2023.07.1022"
version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ["{version}"]
"skelly_synchronize/__init__.py" = ["{version}"]


[project.scripts]
skelly_synchronize = "skelly_synchronize.__main__:main"
