# pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skelly_synchronize"
description = "Basic template of a python repository"
readme = "README.md"
authors = [{ name = "skelly_synchronize", email = "info@freemocap.org" }]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", #https://www.gnu.org/philosophy/open-source-misses-the-point.en.html
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
] #additional classifiers can be found here: https://pypi.org/classifiers/

keywords = ["basic",
            "template",
            "python",
            "repository"] #change these to your project keywords

dependencies = [
"librosa==0.10.1",
"PySide6>=6.6, <6.8",
"numpy==1.26.2",
"scipy==1.11.4",
"opencv-contrib-python==4.8.*",
"deffcode==0.2.6",
"toml==0.10.2",
"matplotlib==3.8.2",
]

requires-python = ">=3.9,<3.13"

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "bumpver", 
    "isort", 
    "pip-tools", 
    "pytest", 
    "flake8",
    "flake8-bandit",
    "flake8-bugbear",
]

[project.urls]
Homepage = "https://freemocap.org"
Documentation = "https://freemocap.github.io/skelly_synchronize/"
Github = "https://github.com/freemocap/skelly_synchronize"


[tool.bumpver] #bump the version by entering `bumpver update` in the terminal
current_version = "v2024.08.1033"
version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ["{version}"]
"skelly_synchronize/__init__.py" = ["{version}"]

[project.scripts]
skelly_synchronize = "skelly_synchronize.__main__:main"
